palette fixes